kubernetes/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-nginx
  namespace: staging
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Fargate 방식에선 ip 타입만 지원
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-nginx
                port:
                  number: 80
